# aramRL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  a.out  vcpkg.json
.github/workflows/: cmake-single-platform.yml
assets/tiled/: AramTileSet.tsx
deprecated/: commented.hpp
inc/: EntityManager.hpp  rogue.h  rogue.hpp  tileset.hpp
inc/components/: tileset.hpp
inc/core/: Engine.hpp  EntityFactory.hpp  ResourceManager.hpp  RetroDither.hpp  Tilemap.hpp  Tileset.hpp  render.hpp  rogue.hpp  systems.hpp
inc/core/components/: InputComponent.hpp  SpriteComponent.hpp  player.hpp  transform.hpp  vector2d.hpp
inc/core/content/: CharacterDefinition.hpp  ContentDefinition.hpp  ContentType.hpp  ItemDefinition.hpp  TilesetDefinition.hpp
inc/core/procgen/: BiomeGenerator.hpp  DualMeshGenerator.hpp  ElevationGenerator.hpp  FeaturePlacer.hpp  MeshPrimitives.hpp  PointGenerator.hpp  RiverGenerator.hpp
inc/core/systems/: InputSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  TileSystem.hpp
inc/sdl/: EventHandler.hpp
inc/systems/: InputSystem.hpp
inc/tools/: errors.hpp
src/: CMakeLists.txt  EntityManager.cpp  keyboard.c  main  main.c  main.cpp  player.c  player.cpp  render.cpp  rogue.cpp  systems.cpp  tiles.cpp  tileset.cpp
src/core/: Engine.cpp  EntityFactory.cpp  ResourceManager.cpp  RetroDither.cpp  Tilemap.cpp  render.cpp  tileset.cpp
src/core/content/: CharacterDefinition.cpp  ItemDefinition.cpp  TilesetDefinition.cpp
src/core/procgen/: BiomeGenerator.cpp  DualMeshGenerator.cpp  ElevationGenerator.cpp  FeaturePlacer.cpp  PointGenerator.cpp  RiverGenerator.cpp
src/core/systems/: InputSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  TileSystem.cpp
src/game/: main.cpp
src/systems/: InputSystem.cpp  MovementSystem.cpp
tests/: CMakeLists.txt
tests/core/: asset_test.cpp  components_test.cpp  content_definition_test.cpp  engine_test.cpp  entity_factory_test.cpp  procgen_test.cpp  resource_manager_test.cpp  sample_test.cpp  sdl_init_test.cpp  systems_test.cpp  test_fixture.hpp
tests/data/: sample_map.txt  sample_tileset.json
